# metis

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTORS.md  DOCKER_TEST_RESULTS.md  Dockerfile  README.es.md  README.md  README.ru.md  RELEASE.md  SECURITY.md  config.example.yaml  config.production.yaml  docker-compose.prod.yml  docker-compose.yml  index.html  pyproject.toml
.github/workflows/: benchmark.yml  ci.yml  pages.yml  publish-ghcr.yml  publish-pypi.yml  release.yml
benchmarks/: __init__.py  harness.py  providers.py  report.py  run.py
benchmarks/datasets/: factual.jsonl  reasoning.jsonl  simple.jsonl  task_understanding.jsonl
config/: DOCKER_TEST_RESULTS.md  TEST_SETUP.md  aimarket-capability.example.json  docker-cluster.yaml  docker-modules.yaml  docker-node-a.yaml  docker-node-b.yaml  docker-runtime.yaml  docker.env.example  observability.example.yaml  test-hybrid.yaml
coverage/: coverage.json
deploy/: README.md  backup.sh  loadtest.k6.js  nginx.conf
deploy/apache-test/: README.md  deploy.sh  httpd.conf  index.html
deploy/monitoring/: grafana-dashboard.json  prometheus-alerts.yml
deploy/skopos-test/: .gitignore  README.md  agent.yaml  deploy.sh  docker-compose.yml  nginx-https.snippet  postgres-harden.sh  remote-sync.sh  servers.yaml
docs/: AUDIT.md  DISTRIBUTED.md  OPERATIONS.md  TEST_RESULTS.md
docs/benchmarks/: BENCHMARK-2026-07-11.md  HEAD-TO-HEAD-2026-07-11.md  bench-bakeoff-2026-07-11.json  bench-extravariants-2026-07-11.json  bench-hardtest-2026-07-11.json  bench-headtohead-2026-07-11.json  bench-minimax-2026-07-11.json  bench-weaktest-2026-07-11.json  benchmark-2026-07-11.json
docs/en/: API.md  ARCHITECTURE.md  BENCHMARKS.md  DEPLOYMENT.md  DISTRIBUTED.md  ECOSYSTEM.md  KNOWLEDGE.md  MATURITY.md  NAMING.md  OBSERVABILITY.md  README.md  RESEARCH.md  SECURITY.md
docs/es/: API.md  ARCHITECTURE.md  BENCHMARKS.md  DEPLOYMENT.md  DISTRIBUTED.md  ECOSYSTEM.md  KNOWLEDGE.md  NAMING.md  OBSERVABILITY.md  README.md  RESEARCH.md  SECURITY.md
docs/landing/: README.md  index.html  serve.mjs
metis/: __init__.py  cli.py  config.py  coordinator_server.py  env_compat.py  exoskeleton.py  security.py  serve.py
scripts/: docker-entrypoint-coordinator.sh  docker-entrypoint-node.sh  seed_ecosystem_knowledge.py
tests/: __init__.py  conftest.py  test_adversarial_gates.py  test_aimarket_invoke.py  test_api.py  test_api_app.py  test_api_observability.py  test_capability.py  test_cli_commands.py  test_coordinator_server.py  test_core_coverage.py  test_core_coverage_boost.py  test_dgpd.py  test_distributed.py  test_docker_config.py  test_economy.py  test_ecosystem_api.py  test_gates.py  test_grounded_verify.py  test_identity.py  test_injection.py  test_integration_e2e.py  test_integration_v02.py  test_knowledge.py  test_mcp.py  test_module_registry.py  test_multimodal.py  test_observability.py  test_pipeline_agreement.py  test_pipeline_event_sink.py  test_reasoning_content.py  test_runtime.py  test_search_economy_env.py  test_security.py
wiki/: Architecture.md  Configuration.md  Docker-Deployment.md  Ecosystem.md  FAQ.md  Feedback.md  Home.md  IDE-Integration.md  Knowledge.md  Observability.md  Quick-Start.md  Research-Evidence.md  Troubleshooting.md
(+107 files in other folders)
