[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aimarket-metis"
version = "0.2.0"
description = "Metis — distributed cognitive layer over any LLM"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "alexar76", email = "publish@alexar76.dev" }]
keywords = ["llm", "multi-agent", "reasoning", "mcp", "aimarket"]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest>=8.0",
]
distributed = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
]

[project.urls]
Homepage = "https://alexar76.github.io/metis/"
Documentation = "https://github.com/alexar76/metis"
Repository = "https://github.com/alexar76/metis"
Issues = "https://github.com/alexar76/metis/issues"
Changelog = "https://github.com/alexar76/metis/blob/main/CHANGELOG.md"

[project.scripts]
metis = "metis.cli:main"
metis-benchmark = "benchmarks.run:main"
metis-cluster = "metis.distributed.cli:cluster_status_main"
metis-coordinator = "metis.distributed.cli:coordinator_serve_main"
metis-node = "metis.distributed.cli:node_serve_main"
metis-serve = "metis.serve:serve_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["metis*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["metis"]
omit = [
    "metis/training/*",
    "metis/serve.py",
    "metis/cli.py",
    "metis/distributed/cli.py",
    "metis/distributed/server.py",
    "metis/models/anthropic.py",
    "metis/security.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 78
precision = 0
